# rs-zip2jsons2ql

./: Cargo.toml  README.md  doc-web.sh
examples/api/zip2jsons2ql/: Cargo.toml  client.sh  test.sh  zip2jsons2ql  zip2jsons2ql.gql
examples/api/zip2jsons2ql/raw.d/: j1.json  j2.json  j3.json  j4.json
examples/api/zip2jsons2ql/src/: main.rs
src/: lib.rs
