[package]
name = "rs-zip2jsons2ql"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.async-graphql]
version = "7"
default-features = false
features = [
	"dataloader",
	"boxed-trait",
]

[dependencies.async-trait]
version = "0"
default-features = false
features = [
]

[dependencies.tokio]
version = "1"
default-features = false
features = [
	"rt-multi-thread",
]
